# pear74

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/miyatalab/pear74/: MainActivity.kt
ios/: Package.swift  Podfile  judge_colorchart.podspec
ios/Classes/: native_opencv.cpp
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: file_manager.dart  main.dart  native_opencv.dart  picture_manager.dart
